--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,6 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      body {
+        background-color: #f6f2fe;
+      }
+
+      input {
+        font-size: 24px;
+        box-shadow: 4px 9px 10px #0000004d;
+        border: 1px solid #885df1;
+        color: #885df1;
+      }
+
+      button {
+        border-radius: 40px;
+        box-shadow: 15px 5px 10px rgb(0 0 0 / 30%);
+        padding: 10px 20px;
+        font-size: 18px;
+        border: 1px solid #885df1;
+        color: #885df1;
+      }
+
+      .timer {
+        display: flex;
+        margin-top: 50px;
+      }
+
+      .field {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 50px;
+        font-weight: 100;
+      }
+
+      .value {
+        font-weight: 700;
+        font-size: 24px;
+      }
+
+      .label {
+        font-size: 20px;
+        font-weight: 300;
+        color: #885df1;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
